Fix ifdef-foo for the BSDs which are still living in the 90s

NetBSD and FreeBSD still don't _POSIX_SAVED_IDS

https://bugs.freedesktop.org/show_bug.cgi?id=41513

Signed-off-by: Jeremy Huddleston <jeremyhu@apple.com>